--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "RunninHillDBConnect": "Data Source=DESKTOP-P2NRLEL\\SQLEXPRESS;Initial Catalog=RunningHillEx;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "getWordsQuery": "select * from Words where Category='"
 }
