--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RunninHillDBConnect": "Data Source=DESKTOP-P2NRLEL\\SQLEXPRESS;Initial Catalog=RunningHillEx;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "getWordsQuery": "select * from Words where Category='",
+  "getCatsQuery": "select * from Word_Categories"
 }
