Added post sentence controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,7 @@
   "AllowedHosts": "*",
   "RunninHillDBConnect": "Data Source=DESKTOP-P2NRLEL\\SQLEXPRESS;Initial Catalog=RunningHillEx;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
   "getWordsQuery": "select * from Words where Category='",
-  "getCatsQuery": "select * from Word_Categories"
+  "getCatsQuery": "select * from Word_Categories",
+  "postSentence": "insert into Sentences values ",
+  "getSentences":  "select * from Sentences"
 }
