added the get sentence controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,5 @@
   "getWordsQuery": "select * from Words where Category='",
   "getCatsQuery": "select * from Word_Categories",
   "postSentenceQuery": "insert into Sentences values ",
-  "getSentences": "select * from Sentences"
+  "getSentencesQuery": "select * from Sentences"
 }
